@@ -1,5 +1,10 @@
 2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* src/foreign.c (igraph_read_graph_ncol) : added directed argument
+	* interfaces/python/graphobject.c : updated
+
+2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>
+
 	* src/layout.c (igraph_layout_merge_dla, igraph_i_layout_sphere_2d)
 	(igraph_i_layout_sphere_3d, igraph_i_layout_merge_dla) : added
 	* examples/simple/igraph_i_layout_sphere.c : added
